# DTC1000-Config

./: CMakeLists.txt  addregdialog.h  dtc1000.cpp  dtc1000.h  main.cpp  mainwindow.cpp  mainwindow.h
